docs: created listOpeningsHandler docs
