# handler/listOpeningsHandler.go
@@ -7,6 +7,16 @@ import (
 	"github.com/guivictorr/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary List Opening
+// @Description List job openings
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListOpeningsResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /openings [get]
 func ListOpeningsHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 	if err := db.Find(&openings).Error; err != nil {
